kubernetes/media/bazarr.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: bazarr
    service: media
  name: bazarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bazarr
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: bazarr
        service: media
    spec:
      volumes:
      - name: anime
        persistentVolumeClaim:
          claimName: anime-claim
      - name: tv
        persistentVolumeClaim:
          claimName: tv-claim
      - name: movies
        persistentVolumeClaim:
          claimName: movies-claim
      - name: config
        persistentVolumeClaim:
          claimName: bazarr
      containers:
      - image: linuxserver/bazarr
        name: bazarr
        resources: {}
        volumeMounts:
        - name: config
          mountPath: "/config"
        - name: anime
          mountPath: "/media/anime"
        - name: tv
          mountPath: "/media/tv"
        - name: movies
          mountPath: "/media/movies"
status: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: bazarr
  name: bazarr
spec:
  ports:
  - name: web
    protocol: TCP
    port: 6767
  selector:
    app: bazarr
  type: ClusterIP
status:
  loadBalancer: {}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bazarr-ingress
spec:
  rules:
  - host: bazarr.k8s.bnet.lan
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bazarr
            port:
              name: web
