kubernetes/media/jackett.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: jackett
  name: jackett
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jackett
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: jackett
    spec:
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: config-pvc
      - name: config-new
        persistentVolumeClaim:
          claimName: jackett-longhorn
      containers:
      - image: linuxserver/jackett
        name: jackett
        resources: {}
        volumeMounts:
        - name: config-new
          mountPath: "/confignew"
        - name: config
          mountPath: "/config"
          subPath: "jackett"
      dnsConfig:
        options:
        - name: ndots
          value: "1"
        - name: single-request-reopen
status: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: jackett
  name: jackett
spec:
  ports:
  - name: web
    protocol: TCP
    port: 80
    targetPort: 9117
  selector:
    app: jackett
  type: ClusterIP
status:
  loadBalancer: {}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jackett-ingress
spec:
  rules:
  - host: jackett.k8s.jnet.lan
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jackett
            port:
              name: web
