kubernetes/media/prowlarr.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: prowlarr
    service: media
  name: prowlarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prowlarr
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: prowlarr
        service: media
    spec:
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: prowlarr
      containers:
      - image: linuxserver/prowlarr
        name: prowlarr
        resources: {}
        volumeMounts:
        - name: config
          mountPath: "/config"
          subPath: "prowlarr"
      dnsConfig:
        options:
        - name: ndots
          value: "1"
        - name: single-request-reopen
status: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: prowlarr
  name: prowlarr
spec:
  ports:
  - name: web
    protocol: TCP
    port: 9696
  selector:
    app: prowlarr
  type: ClusterIP
status:
  loadBalancer: {}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr-ingress
spec:
  rules:
  - host: prowlarr.k8s.bnet.lan
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prowlarr
            port:
              name: web
