kubernetes/media/qbittorrent.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: qbittorrent
  name: qbittorrent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qbittorrent
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: qbittorrent
    spec:
      volumes:
      - name: nfs
        persistentVolumeClaim:
          claimName: nfs-pvc
      - name: config
        persistentVolumeClaim:
          claimName: qbittorrent-longhorn
      containers:
      - image: linuxserver/qbittorrent
        name: qbittorrent
        resources: {}
        volumeMounts:
        - name: config
          mountPath: "/config"
        - name: nfs
          mountPath: "/media"
      dnsConfig:
        options:
        - name: ndots
          value: "1"
        - name: single-request-reopen
status: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: qbittorrent
  name: qbittorrent
spec:
  ports:
  - name: web
    protocol: TCP
    port: 8080
  selector:
    app: qbittorrent
  type: ClusterIP
status:
  loadBalancer: {}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent-ingress
spec:
  rules:
  - host: torrent.k8s.jnet.lan
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: qbittorrent
            port:
              name: web
