kubernetes/media/radarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: radarr
    service: media-mgmt
  name: radarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: radarr
    spec:
      volumes:
      - name: nfs
        persistentVolumeClaim:
          claimName: nfs-pvc
      - name: config
        persistentVolumeClaim:
          claimName: radarr-longhorn
      containers:
      - image: linuxserver/radarr
        imagePullPolicy: "Always"
        name: radarr
        resources: {}
        volumeMounts:
        - name: config
          mountPath: "/config"
        - name: nfs
          mountPath: "/media"
      dnsConfig:
        options:
        - name: ndots
          value: "1"
        - name: single-request-reopen
status: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: radarr
    service: media-mgmt
  name: radarr
spec:
  ports:
  - name: web
    port: 7878
    protocol: TCP
  selector:
    app: radarr
  type: ClusterIP
status:
  loadBalancer: {}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr-ingress
spec:
  rules:
  - host: radarr.k8s.jnet.lan
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: radarr
            port:
              name: web
