kubernetes/media/sabnzbd.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: sabnzbd
    service: media
  name: sabnzbd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sabnzbd
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: sabnzbd
        service: media
    spec:
      volumes:
      - name: downloads
        persistentVolumeClaim:
          claimName: downloads-claim
      - name: config
        persistentVolumeClaim:
          claimName: sabnzbd
      containers:
      - image: linuxserver/sabnzbd
        name: sabnzbd
        resources: {}
        volumeMounts:
        - name: config
          mountPath: "/config"
        - name: downloads
          mountPath: "/downloads"
          subPath: "sabnzbd"
      dnsConfig:
        options:
        - name: ndots
          value: "1"
        - name: single-request-reopen
status: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: sabnzbd
  name: sabnzbd
spec:
  ports:
  - name: web
    protocol: TCP
    port: 8080
  selector:
    app: sabnzbd
  type: ClusterIP
status:
  loadBalancer: {}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sabnzbd-ingress
spec:
  rules:
  - host: nzb.k8s.bnet.lan
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sabnzbd
            port:
              name: web
